k8s/redis.yaml
# 1. BÖLÜM: Redis Askeri (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1 # Redis için 1 kopya yeterlidir
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine # En hafif ve hızlı Redis sürümü
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

---
# 2. BÖLÜM: Redis Trafik Polisi (Service)
apiVersion: v1
kind: Service
metadata:
  name: redis-service # DİKKAT: Artık Redis'in K8s içindeki adresi budur!
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
