k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kampusumden-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "kampusumden-managed-cert"
spec:
  rules:
    - host: api.kampusumden.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kampusumden-backend-service
                port:
                  number: 80
    - host: staging.kampusumden.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kampusumden-backend-service
                port:
                  number: 80
